filters TV Channels by geoloc V1

--- a/docusaurus/docs/uml-analysis/use-cases/uc-006.md
+++ b/docusaurus/docs/uml-analysis/use-cases/uc-006.md
@@ -1,12 +1,13 @@
 # UC-006: Gestion des filtres RF
 
-**Résumé :** Ce cas d'utilisation décrit la gestion des filtres et exclusions de fréquences RF, permettant d'éviter les interférences avec les canaux TV et de définir des contraintes personnalisées pour l'optimisation du plan fréquences.
+**Résumé :** Ce cas d'utilisation décrit la gestion des filtres et exclusions de fréquences RF, permettant d'éviter les interférences avec les canaux TV et de définir des contraintes personnalisées pour l'optimisation du plan fréquences. Inclut la sélection automatique de canaux selon la réglementation par pays/région.
 
 **Acteur :** Ingénieur Son
 
 **Précondition :**
 
 - Les canaux TV par défaut sont initialisés (Generic-6MHz, 7MHz, 8MHz). Ceci est réalisé à l'initialisation de la database.
+- Les données de réglementation par pays sont chargées depuis CountryDataJson.
 
 **Date de création :** 16 janvier 2025  
 **Version :** 1.2
@@ -16,12 +17,15 @@
 - Les filtres d'exclusion sont configurés et appliqués
 - Les canaux TV sélectionnés sont exclus du calcul RF
 - Les filtres personnalisés utilisateur sont sauvegardés
+- La configuration pays/région est appliquée aux canaux autorisés
 - Le système de calcul intègre les nouvelles contraintes
 
 ## Acteurs secondaires
 
 - **Système de base de données** : Stockage et récupération des canaux d'exclusion
 - **Module de calcul RF** : Utilisation des filtres lors du calcul des fréquences
+- **CountryDataJson** : Données de réglementation par pays/région
+- **CountrySelectionModal** : Interface de sélection géographique
 
 ## Scénario nominal
 
@@ -98,6 +102,36 @@
 
 **Reprise** : Retour à l'état normal de gestion des filtres
 
+### Scénario alternatif 5: Configuration par pays/région
+
+**Condition initiale** : L'utilisateur souhaite appliquer la réglementation d'un pays spécifique
+**Déclenchement** : Clic sur l'icône roue crantée dans l'en-tête "Frequency Range"
+**Actions** :
+
+| Acteur | Action |
+|--------|--------|
+| Ingénieur Son | Clique sur l'icône Settings dans l'en-tête du tableau |
+| Système | Ouvre CountrySelectionModal via DialogService |
+| Système | Charge CountryData depuis CountryDataJson.GetCountryData() |
+| Système | Affiche la liste des pays disponibles |
+| Ingénieur Son | Sélectionne un pays dans le dropdown |
+| Système | Met à jour selectedCountryKey via OnCountryChanged() |
+| Système | Affiche les régions si plusieurs disponibles |
+| Système | Sélectionne automatiquement la région si unique |
+| Ingénieur Son | Sélectionne une région (si plusieurs choix) |
+| Système | Affiche les canaux autorisés et la description réglementaire |
+| Ingénieur Son | Clique "Appliquer" pour confirmer |
+| Système | Ferme le modal avec CountrySelectionResult |
+| Système | Exécute ApplyCountrySelection(selection) |
+| Système | Change vers la division appropriée (6MHz/7MHz/8MHz) |
+| Système | Décoche tous les canaux (Exclude = false) |
+| Système | Coche tous les canaux NON autorisés (Exclude = true) |
+| Système | Sauvegarde chaque modification via SaveExclusionChannelAsync() |
+| Système | Affiche notification de succès |
+| Système | Met à jour l'affichage avec la nouvelle configuration |
+
+**Reprise** : Le système revient à l'état normal avec la configuration pays appliquée
+
 ### Scénario alternatif 4: Échec de sauvegarde
 
 **Condition initiale** : Problème d'accès à la base de données
@@ -121,7 +155,9 @@
 sequenceDiagram
     participant IS as Ingénieur Son
     participant UI as TVChannelsFilter
+    participant CSM as CountrySelectionModal
     participant ECVM as ExclusionChannelViewModel
+    participant CDJ as CountryDataJson
     participant BD as DatabaseContext
     participant FCS as FrequencyCalculationService
 
@@ -129,9 +165,36 @@ sequenceDiagram
     UI->>ECVM: LoadExclusionChannelsAsync()
     ECVM->>BD: GetAllAsync<ExclusionChannel>()
     BD-->>ECVM: Liste canaux exclusion
+    UI->>CDJ: GetCountryData()
+    CDJ-->>UI: Données pays/régions
     ECVM->>ECVM: FilterExclusionChannels(selectedCountry)
     ECVM-->>UI: Canaux filtrés affichés
     UI-->>IS: Interface avec canaux TV
+
+    IS->>UI: Clique icône Settings
+    UI->>CSM: DialogService.ShowAsync<CountrySelectionModal>()
+    CSM->>CDJ: Affiche pays disponibles
+    IS->>CSM: Sélectionne pays
+    CSM->>CSM: OnCountryChanged(countryKey)
+    CSM->>CSM: Auto-sélection région si unique
+    IS->>CSM: Sélectionne région (si multiple)
+    CSM-->>CSM: Affiche canaux autorisés + description
+    IS->>CSM: Clique "Appliquer"
+    CSM-->>UI: Retourne CountrySelectionResult
+    UI->>UI: ApplyCountrySelection(selection)
+    UI->>ECVM: SetSelectedDivision(country.ChannelDivision)
+    ECVM->>ECVM: ApplyFiltersCommand.ExecuteAsync()
+    
+    loop Pour chaque canal
+        UI->>UI: shouldExclude = !allowedChannels.contains(channel)
+        alt État changé
+            UI->>ECVM: channel.Exclude = shouldExclude
+            UI->>ECVM: SaveExclusionChannelAsync()
+            ECVM->>BD: UpdateItemAsync<ExclusionChannel>()
+        end
+    end
+    
+    UI-->>IS: Notification succès + affichage mis à jour
 
     IS->>UI: Sélectionne onglet (8MHz/7MHz/6MHz)
     UI->>ECVM: SetSelectedDivision(division)
@@ -180,6 +243,21 @@ flowchart TD
     
     E -->|Non| I{Modifier exclusions?}
     
+    I -->|Configuration pays/région| IA[Cliquer icône Settings]
+    IA --> IB[Ouvrir CountrySelectionModal]
+    IB --> IC[Sélectionner pays]
+    IC --> ID{Plusieurs régions?}
+    ID -->|Oui| IE[Sélectionner région]
+    ID -->|Non| IF[Auto-sélection région unique]
+    IE --> IG[Afficher canaux autorisés]
+    IF --> IG
+    IG --> IH[Cliquer Appliquer]
+    IH --> II[Changer division si nécessaire]
+    II --> IJ[Appliquer exclusions selon réglementation]
+    IJ --> IK[Sauvegarder modifications]
+    IK --> IL[Afficher notification succès]
+    IL --> CC
+    
     I -->|Sélection individuelle| J[Cocher/décocher canal]
     J --> K[Mettre à jour Exclude property]
     K --> L[Sauvegarder canal en BD]
@@ -225,9 +303,11 @@ flowchart TD
 ## Points d'extension
 
 - **Import de fichiers CSV** : Permettre l'import en masse de listes de canaux TV
-- **Géolocalisation** : Adapter automatiquement les canaux selon la région/pays
+- ✅ **Géolocalisation** : Adapter automatiquement les canaux selon la région/pays (IMPLÉMENTÉ)
 - **Scan temps réel** : Intégration avec des données de scan pour détecter les canaux actifs
 - **Présets par événement** : Sauvegarder des configurations de filtres réutilisables
+- **Mise à jour réglementaire** : Synchronisation automatique des données CountryDataJson
+- **Validation géographique** : Vérification de cohérence entre GPS et pays sélectionné
 
 ## Contraintes techniques
 
@@ -236,3 +316,8 @@ flowchart TD
 - Les filtres utilisateur ont le type "User" pour les distinguer des canaux système
 - L'intégration avec FrequencyCalculationService via GetExcludedRanges()
 - Validation en temps réel des plages de fréquences (UserEndFrequency > UserStartFrequency)
+- **Données géographiques** : CountryData stocké en JSON statique (Countries.cs), méritera un refactoring vers le serveur de backend.
+- **Modal système** : CountrySelectionModal utilise MudBlazor.IDialogService
+- **Synchronisation** : Changement automatique de division selon country.ChannelDivision
+- **Optimisation** : Sauvegarde sélective (seulement si channel.Exclude change)
+- **Pays supportés** : France, Belgique, Allemagne, Pays-Bas, États-Unis avec réglementations officielles
