Better handling of groups : when deleting a group, devices get to a new group. Groups calculation is better.  When adding device, you can assign them to groups.

--- a/docusaurus/docs/uml-analysis/use-cases/uc-005.md
+++ b/docusaurus/docs/uml-analysis/use-cases/uc-005.md
@@ -1,6 +1,6 @@
 # UC-005: Gestion des groupes temporels
 
-**Résumé :** Ce cas d'utilisation décrit la gestion des groupes d'équipements RF avec planification temporelle multi-créneaux, permettant l'optimisation du spectre par réutilisation intelligente des fréquences selon les périodes d'activité.
+**Résumé :** Ce cas d'utilisation décrit la gestion des groupes d'équipements RF avec planification temporelle multi-créneaux, permettant l'optimisation du spectre par calcul séquentiel d'étapes de fréquences selon les superpositions temporelles réelles.
 
 **Acteur :** Ingénieur Son/RF
 
@@ -9,17 +9,20 @@
 - Aucune
 
 **Date de création :** 15 janvier 2025  
-**Version :** 1.0
+**Version :** 2.0
 
 **Post condition :**
 
 - Les groupes temporels sont créés/modifiés avec leurs créneaux horaires
 - Les périodes temporelles sont correctement configurées et validées
+- Le système génère automatiquement les étapes de calcul par paires selon les superpositions
 - Les données sont persistées en base de données SQLite
+- Les plans de fréquences optimisés sont calculés pour chaque étape temporelle
 
 ## Acteurs secondaires
 
 - **Système de base de données** : Stockage et récupération des groupes et périodes
+- **Service de calcul fréquentiel** : Génération des étapes de calcul et optimisation du spectre
 
 ## Scénario nominal
 
@@ -38,29 +41,47 @@
 | Système | Crée un objet TimePeriod avec les paramètres saisis |
 | Ingénieur Son | Clique sur "Save" pour confirmer la période |
 | Système | Ajoute la TimePeriod au groupe via RFGroup.AddTimePeriod() |
+| Système | **Analyse automatiquement les superpositions temporelles avec autres groupes** |
+| Système | **Génère les étapes de calcul par paires (ex: "Groupe A & B", "Groupe B & C")** |
 | Système | Sérialise les périodes temporelles en JSON pour le stockage |
 | Système | Persiste le groupe en base de données SQLite |
-| Système | Met à jour l'affichage avec la nouvelle configuration |
+| Système | Met à jour l'affichage avec la nouvelle configuration temporelle |
 
 ## Scénarios alternatifs
 
-### Scénario alternatif 1: Chevauchement temporel détecté
+### Scénario alternatif 1: Calcul automatique des étapes de superposition
 
-**Condition initiale** : L'utilisateur configure une période qui chevauche avec une période existante
-**Déclenchement** : Lors de la validation d'une nouvelle période temporelle
+**Condition initiale** : L'utilisateur lance le calcul des fréquences avec des groupes temporels configurés
+**Déclenchement** : Clic sur "Calculer Fréquences"
 **Actions** :
 
 | Acteur | Action |
 |--------|--------|
-| Système | Détecte le chevauchement via l'algorithme DoPeriodsOverlap() |
-| Système | Affiche un avertissement de chevauchement temporel |
-| Système | Propose de fusionner les groupes ou de modifier les créneaux |
-| Ingénieur Son | Choisit l'action à entreprendre (fusionner/modifier/annuler) |
-| Système | Exécute l'action choisie |
+| Système | Exécute BuildGroupCalculationPlan() pour analyser les superpositions |
+| Système | Génère les étapes de calcul chronologiques par paires |
+| Système | Calcule les fréquences pour chaque étape (ex: "AC/DC & Katie Melua") |
+| Système | Affiche dans SciChart les résultats par étapes de calcul |
+| Système | Permet la visualisation distincte de chaque combinaison temporelle |
 
-**Reprise** : Retour au scénario nominal pour finaliser la configuration
+**Reprise** : Le système présente les résultats optimisés dans l'interface graphique
 
-### Scénario alternatif 2: Données temporelles incohérentes
+### Scénario alternatif 2: Chevauchement temporel complexe détecté
+
+**Condition initiale** : Trois groupes ou plus ont des superpositions temporelles multiples
+**Déclenchement** : Lors de l'analyse des périodes temporelles
+**Actions** :
+
+| Acteur | Action |
+|--------|--------|
+| Système | Détecte les superpositions multiples via DoGroupsOverlap() |
+| Système | Génère plusieurs étapes de calcul pour optimiser la réutilisation |
+| Système | Exemple: Group1&2 (18h-19h), Group2&3 (19h-20h), Group3&4 (20h-21h) |
+| Système | Calcule chaque étape avec les bonnes intermodulations |
+| Système | Affiche les résultats séparés par étape temporelle |
+
+**Reprise** : Chaque étape de calcul est traitée indépendamment pour optimisation maximale
+
+### Scénario alternatif 3: Données temporelles incohérentes
 
 **Condition initiale** : L'utilisateur saisit des données temporelles invalides
 **Déclenchement** : Lors de la validation des paramètres temporels
@@ -76,7 +97,7 @@
 
 **Reprise** : Retour au scénario nominal après correction
 
-### Scénario alternatif 3: Échec de sauvegarde base de données
+### Scénario alternatif 4: Échec de sauvegarde base de données
 
 **Condition initiale** : Problème d'accès à la base de données SQLite
 **Déclenchement** : Lors de l'exécution de GroupsViewModel.UpdateGroupAsync()
@@ -88,12 +109,12 @@
 | Système | Détecte l'échec de la transaction SQLite |
 | Système | Log l'erreur dans le système de debug |
 | Système | Affiche un message d'erreur à l'utilisateur |
-| Système | Maintient les données en mémo   ire (non persistées) |
+| Système | Maintient les données en mémoire (non persistées) |
 | Ingénieur Son | Peut réessayer la sauvegarde ou annuler l'opération |
 
 **Reprise** : Retour au scénario nominal après résolution du problème
 
-### Scénario alternatif 4: Suppression de période temporelle
+### Scénario alternatif 5: Suppression de période temporelle
 
 **Condition initiale** : L'utilisateur souhaite supprimer une période existante
 **Déclenchement** : Clic sur "Delete Time Periods"
@@ -105,6 +126,7 @@
 | Système | Affiche une demande de confirmation |
 | Ingénieur Son | Confirme la suppression |
 | Système | Supprime la période via RFGroup.DeleteTimePeriod() |
+| Système | **Recalcule automatiquement les étapes de calcul modifiées** |
 | Système | Met à jour la sérialisation JSON des périodes |
 | Système | Sauvegarde les modifications en base |
 | Système | Rafraîchit l'affichage de la liste |
@@ -118,6 +140,7 @@ sequenceDiagram
     participant IS as Ingénieur Son
     participant UI as RFGroupsLayout
     participant GVM as GroupsViewModel  
+    participant FCS as FrequencyCalculationService
     participant BD as DatabaseContext
     participant RFG as RFGroup
     participant TP as TimePeriod
@@ -160,6 +183,17 @@ sequenceDiagram
     BD-->>GVM: Sauvegarde confirmée
     GVM-->>UI: Mise à jour terminée
     UI-->>IS: Affichage actualisé
+
+    Note over IS,FCS: Calcul des fréquences temporelles
+    IS->>UI: Clique "Calculer Fréquences"
+    UI->>FCS: CalculateFrequenciesAsync()
+    FCS->>FCS: BuildGroupCalculationPlan()
+    FCS->>FCS: Analyse superpositions temporelles
+    FCS->>FCS: Génère étapes par paires
+    FCS->>FCS: Calcul fréquences par étape
+    FCS->>FCS: CreateCalculationStepName()
+    FCS-->>UI: Étapes calculées (ex: "Groupe A & B")
+    UI-->>IS: Affichage SciChart mis à jour
 ```
 
 ## Diagramme d'activité
@@ -201,7 +235,15 @@ flowchart TD
     Y --> T
     
     U -->|Oui| Z[Mettre à jour affichage]
-    Z --> AA{Autre action?}
+    Z --> AA{Calculer fréquences?}
+    
+    AA -->|Oui| BB[BuildGroupCalculationPlan]
+    BB --> CC[Analyser superpositions temporelles]
+    CC --> DD[Générer étapes par paires]
+    DD --> EE[Calculer fréquences par étape]
+    EE --> FF[Créer noms d'étapes dynamiques]
+    FF --> GG[Afficher résultats SciChart]
+    GG --> HH{Autre action?}
     
     I -->|Non| AB[Éditer groupe existant?]
     AB -->|Oui| AC[Mode édition]
@@ -211,21 +253,71 @@ flowchart TD
     AB -->|Non| AE[Supprimer période?]
     AE -->|Oui| AF[Confirmer suppression]
     AF --> AG[Supprimer TimePeriod]
-    AG --> T
+    AG --> AI[Recalculer étapes]
+    AI --> T
     
-    AE -->|Non| AA
-    AA -->|Oui| D
-    AA -->|Non| AH[Fin]
+    AE -->|Non| HH
+    AA -->|Non| HH
+    HH -->|Oui| D
+    HH -->|Non| AJ[Fin]
+    
+    style BB fill:#e3f2fd
+    style DD fill:#f3e5f5
+    style EE fill:#e8f5e8
+    style GG fill:#fff3e0
 ```
 
 ## Points d'extension
 
-- **Import/Export de plannings** : Permettre l'import de plannings depuis des calendriers externes
-- **Modèles de groupes** : Créer des templates réutilisables pour des configurations standards
-- **Synchronisation temporelle** : Intégration avec des systèmes de chronométrage externes
+- **Optimisation avancée des transitions** : Minimiser les changements de fréquences entre étapes consécutives
+- **Analyse prédictive des conflits** : Détecter les problèmes potentiels avant le calcul
+- **Templates d'événements** : Sauvegarder des configurations temporelles réutilisables
+- **Synchronisation avec systèmes externes** : Intégration calendriers et timecode
 
 ## Contraintes techniques
 
 - Les périodes temporelles sont stockées en JSON sérialisé dans SQLite
-- La validation des chevauchements utilise l'algorithme DoPeriodsOverlap()
-- Les contrôles MudBlazor (DateRangePicker, TimePicker) imposent leurs contraintes UI (à améliorer dans le futur)
+- La détection des superpositions utilise l'algorithme DoGroupsOverlap() optimisé
+- Le calcul séquentiel par paires garantit l'optimisation du spectre disponible
+- Les noms d'étapes sont générés dynamiquement selon la logique "Groupe A & B"
+- Les contrôles MudBlazor (DateRangePicker, TimePicker) gèrent la saisie temporelle
+- SciChart affiche les résultats par étapes de calcul avec couleurs distinctes
+
+## Algorithme de calcul temporel
+
+### Logique de génération des étapes
+
+```csharp
+private List<GroupCalculationStep> BuildGroupCalculationPlan()
+{
+    // 1. Trier les groupes par ordre chronologique
+    var sortedGroups = groups.OrderBy(g => g.TimePeriods.Min(tp => tp.StartTime));
+    
+    // 2. Pour chaque groupe, identifier ses superpositions
+    foreach (var group in sortedGroups)
+    {
+        var overlappingGroups = FindOverlappingGroups(group);
+        
+        // 3. Créer des étapes de calcul par paires
+        foreach (var overlapping in overlappingGroups)
+        {
+            if (group.StartTime <= overlapping.StartTime)
+            {
+                CreateCalculationStep(group, overlapping);
+                // Résultat: "Groupe A & Groupe B"
+            }
+        }
+    }
+    
+    // 4. Traiter les groupes isolés
+    ProcessIsolatedGroups();
+}
+```
+
+### Exemples de résultats
+
+- **Groupe AC/DC seul** → Étape: `"AC/DC"`
+- **AC/DC + Katie Melua** → Étape: `"AC/DC & Katie Melua"`  
+- **Katie Melua + Bruce Springsteen** → Étape: `"Katie Melua & Bruce Springsteen"`
+
+Cette approche garantit que chaque superposition temporelle réelle génère une étape de calcul optimisée avec les bonnes intermodulations.
