--- a/docusaurus/docs/uml-analysis/use-cases/uc-007.md
+++ b/docusaurus/docs/uml-analysis/use-cases/uc-007.md
@@ -1,6 +1,6 @@
 # UC-007: Gestion temporelle avancée
 
-**Résumé :** Ce cas d'utilisation décrit la gestion temporelle avancée permettant la réutilisation intelligente des fréquences RF en fonction des créneaux horaires et des chevauchements temporels entre groupes d'équipements.
+**Résumé :** Ce cas d'utilisation décrit la gestion temporelle avancée permettant l'optimisation intelligente des fréquences RF par **calcul séquentiel d'étapes par paires** selon les superpositions temporelles réelles entre groupes d'équipements.
 
 **Acteur :** Ingénieur Son/RF
 
@@ -8,22 +8,23 @@
 
 - Des groupes avec périodes temporelles sont configurés
 - Des équipements RF sont assignés aux groupes
-- Au moins deux groupes avec des créneaux temporels différents existent
+- Au moins deux groupes avec des créneaux temporels définis existent
 
 **Date de création :** 15 janvier 2025  
-**Version :** 1.1
+**Version :** 2.0
 
 **Post condition :**
 
-- Les fréquences sont optimisées selon les créneaux temporels
-- La réutilisation fréquentielle est maximisée pour les groupes non-chevauchants
-- L'occupation du spectre est optimisée dans le temps
-- Les calculs d'intermodulation respectent les contraintes temporelles
+- Les étapes de calcul par paires sont générées automatiquement selon les superpositions
+- Les fréquences sont optimisées par étape temporelle (ex: "Groupe A & B")
+- Les intermodulations sont calculées pour chaque combinaison temporelle réelle
+- L'occupation du spectre est optimisée par étapes séquentielles
+- Les données SciChart reflètent les véritables étapes de calcul
 
 ## Acteurs secondaires
 
-- **Système de calcul RF** : Module de calcul et d'optimisation des fréquences
-- **Algorithme de détection** : Service de détection des chevauchements temporels
+- **Système de calcul RF** : Module de calcul et d'optimisation des fréquences par étapes
+- **Algorithme de planification** : Service BuildGroupCalculationPlan() pour générer les étapes
 
 ## Scénario nominal
 
@@ -31,21 +32,22 @@
 |--------|--------|
 | Ingénieur Son | Lance le calcul RF via RFCalcul() |
 | Système | Démarre FrequencyCalculationService.CalculateFrequenciesAsync() |
-| Système | Exécute `FindOverlappingGroups()` pour analyser les chevauchements |
-| Système | Parcourt tous les groupes via _groupsViewModel.Groups |
-| Système | Pour chaque groupe, vérifie s'il chevauche avec d'autres groupes |
-| Système | Exécute `DoGroupsOverlap(group1, group2)` pour chaque paire |
-| Système | Pour chaque paire de TimePeriod, applique `DoPeriodsOverlap()` |
-| Système | Calcule: period1.StartTime < period2.EndTime && period1.EndTime > period2.StartTime |
-| Système | Regroupe les groupes chevauchants dans overlappingGroups |
-| Système | Traite chaque overlappingSet séparément pour l'optimisation |
-| Système | Récupère les équipements via `GetDevicesForGroupSet(groupSet)` |
-| Système | Applique le calcul RF en 3 passes pour chaque groupSet |
-| Système | **Passe 1**: Traite les fréquences verrouillées (IsLocked) |
-| Système | **Passe 2**: Calcule les fréquences libres pour les canaux non verrouillés |
-| Système | **Passe 3**: Génère les fréquences de secours |
-| Système | Stocke les données fréquentielles par groupe avec couleur distincte |
-| Système | Sauvegarde les résultats via SaveAllDevicesAsync() et SaveFrequencyDataAsync() |
+| Système | Exécute `BuildGroupCalculationPlan()` pour générer les étapes par paires |
+| Système | Trie les groupes par ordre chronologique via OrderBy(g => g.TimePeriods.Min()) |
+| Système | Pour chaque groupe, identifie ses superpositions avec `FindOverlappingGroups()` |
+| Système | Exécute `DoGroupsOverlap(group1, group2)` pour détecter les chevauchements |
+| Système | Pour chaque superposition, applique la logique chronologique `(StartTime <= OtherStartTime)` |
+| Système | Génère les étapes par paires : `GroupCalculationStep { GroupsToCalculate, StepName }` |
+| Système | **Exemple** : "AC/DC & Katie Melua", "Katie Melua & Bruce Springsteen" |
+| Système | Pour chaque étape, calcule les fréquences via `GetDevicesForGroupSet()` |
+| Système | Applique le calcul RF en 3 passes pour chaque étape temporelle |
+| Système | **Passe 1**: Traite les fréquences verrouillées (IsLocked) de l'étape |
+| Système | **Passe 2**: Calcule les fréquences libres avec intermodulations de l'étape |
+| Système | **Passe 3**: Génère les fréquences de secours pour l'étape |
+| Système | Génère le nom d'étape via `CreateCalculationStepName()` |
+| Système | Stocke les données par étape avec couleur distincte dans calculationStepData |
+| Système | Convertit pour SciChart via `ConvertCalculationStepDataToGroupData()` |
+| Système | Sauvegarde via SaveAllDevicesAsync() et SaveFrequencyDataAsync() |
 
 ## Scénarios alternatifs
 
@@ -57,59 +59,61 @@
 
 | Acteur | Action |
 |--------|--------|
-| Système | Détecte que chaque groupe forme son propre overlappingSet |
-| Système | Optimise la réutilisation fréquentielle entre groupes disjoints |
-| Système | Le calcul de ses fréquences sera fait totalement séparemment |
+| Système | Détecte que chaque groupe forme sa propre étape de calcul individuelle |
+| Système | Génère des étapes avec un seul groupe : "Nom du Groupe" |
+| Système | Optimise l'utilisation spectrale par réutilisation entre étapes distinctes |
+| Système | Affiche dans SciChart des étapes séparées avec couleurs distinctes |
 
-**Reprise** : Continuation du calcul RF normal
+**Reprise** : Continuation du calcul RF normal par étapes individuelles
 
-### Scénario alternatif 2: Chevauchement partiel complexe
+### Scénario alternatif 2: Superpositions multiples complexes
 
-**Condition initiale** : Plusieurs groupes avec chevauchements partiels
-**Déclenchement** : Détection de patterns de chevauchement complexes
+**Condition initiale** : Un groupe se superpose avec plusieurs autres à des moments différents
+**Déclenchement** : Détection de patterns de superposition en chaîne
 **Actions** :
 
 | Acteur | Action |
 |--------|--------|
-| Système | Analyse les chevauchements multiples via FindOverlappingGroups() |
-| Système | Identifie les clusters de groupes interconnectés |
-| Système | Traite chaque cluster comme un ensemble cohérent |
-| Système | Optimise les fréquences au niveau du cluster |
-| Système | Applique des couleurs distinctes par cluster au niveau du SciChart |
+| Système | Analyse les superpositions multiples via BuildGroupCalculationPlan() |
+| Système | Génère plusieurs étapes par paires selon l'ordre chronologique |
+| Système | **Exemple** : Groupe2 chevauche Groupe1 puis Groupe3 |
+| Système | **Résultat** : "Groupe1 & Groupe2", "Groupe2 & Groupe3" |
+| Système | Calcule chaque étape avec ses propres intermodulations |
+| Système | Affiche les étapes distinctes dans SciChart avec légendes explicites |
 
-**Reprise** : Retour au calcul RF pour les clusters identifiés
+**Reprise** : Chaque étape est traitée séquentiellement avec optimisation par paire
 
 ### Scénario alternatif 3: Contraintes temporelles insuffisantes
 
-**Condition initiale** : Trop de groupes chevauchants pour l'optimisation
-**Déclenchement** : Saturation du spectre disponible
+**Condition initiale** : Trop de groupes dans une même étape pour l'optimisation
+**Déclenchement** : Saturation du spectre disponible pour une étape
 **Actions** :
 
 | Acteur | Action |
 |--------|--------|
-| Système | Détecte la saturation via le nombre d'overlappingGroups |
+| Système | Détecte la saturation via le nombre d'appareils dans l'étape |
 | Système | Priorise les groupes selon leur importance temporelle |
-| Système | Applique un algorithme de fallback standard |
-| Système | Génère un avertissement à l'utilisateur |
-| Ingénieur Son | Peut ajuster les créneaux temporels pour optimiser |
+| Système | Applique un algorithme de fallback pour l'étape concernée |
+| Système | Génère un avertissement spécifique à l'étape |
+| Ingénieur Son | Peut ajuster les créneaux temporels pour optimiser les étapes |
 
-**Reprise** : Retour au scénario nominal avec créneaux ajustés
+**Reprise** : Retour au scénario nominal avec nouvelles étapes générées
 
-### Scénario alternatif 4: Échec de calcul d'intermodulation
+### Scénario alternatif 4: Échec de génération d'étape
 
-**Condition initiale** : Erreur dans le calcul des produits d'intermodulation
-**Déclenchement** : Exception lors de CalculAllIntermod()
+**Condition initiale** : Erreur dans BuildGroupCalculationPlan()
+**Déclenchement** : Exception lors de la création des étapes de calcul
 **Actions** :
 
 | Acteur | Action |
 |--------|--------|
-| Système | Détecte l'échec du calcul d'intermodulation |
+| Système | Détecte l'échec de génération d'étapes |
 | Système | Log l'erreur dans le système de debug |
-| Système | Applique un calcul RF simplifié sans intermodulation |
+| Système | Applique un calcul RF global de fallback (mode legacy) |
 | Système | Affiche un avertissement à l'utilisateur |
-| Système | Permet de continuer avec des fréquences sous-optimales |
+| Système | Permet de continuer avec calcul non-optimisé temporellement |
 
-**Reprise** : Continuation avec plan RF dégradé
+**Reprise** : Continuation avec plan RF dégradé sans étapes temporelles
 
 ## Diagramme de séquence
 
@@ -119,131 +123,159 @@ sequenceDiagram
     participant UI as Interface
     participant FCS as FrequencyCalculationService
     participant GVM as GroupsViewModel
+    participant GCS as GroupCalculationStep
     participant RFG1 as RFGroup1
     participant RFG2 as RFGroup2
-    participant TP1 as TimePeriod1
-    participant TP2 as TimePeriod2
     participant DVM as DevicesViewModel
 
     IS->>UI: Lance calcul RF
     UI->>FCS: CalculateFrequenciesAsync()
-    FCS->>FCS: FindOverlappingGroups()
+    FCS->>FCS: BuildGroupCalculationPlan()
     
     FCS->>GVM: Récupère _groupsViewModel.Groups
     GVM-->>FCS: Liste de tous les groupes
+    FCS->>FCS: OrderBy(g => g.TimePeriods.Min(tp => tp.StartTime))
     
-    loop Pour chaque paire de groupes
-        FCS->>FCS: DoGroupsOverlap(group1, group2)
-        FCS->>RFG1: Récupère TimePeriods
-        RFG1-->>FCS: Liste des périodes groupe1
-        FCS->>RFG2: Récupère TimePeriods
-        RFG2-->>FCS: Liste des périodes groupe2
+    loop Pour chaque groupe chronologique
+        FCS->>FCS: FindOverlappingGroups(group)
         
-        loop Pour chaque paire de périodes
-            FCS->>TP1: StartTime, EndTime
-            FCS->>TP2: StartTime, EndTime
-            FCS->>FCS: DoPeriodsOverlap(period1, period2)
-            Note over FCS: period1.StartTime < period2.EndTime<br/>&& period1.EndTime > period2.StartTime
-        end
-        
-        alt Chevauchement détecté
-            FCS->>FCS: Ajouter au même overlappingSet
-        else Pas de chevauchement
-            FCS->>FCS: Créer overlappingSet séparé
+        loop Pour chaque groupe chevauchant
+            FCS->>FCS: DoGroupsOverlap(group, otherGroup)
+            FCS->>RFG1: Récupère TimePeriods
+            RFG1-->>FCS: Liste des périodes groupe1
+            FCS->>RFG2: Récupère TimePeriods
+            RFG2-->>FCS: Liste des périodes groupe2
+            
+            Note over FCS: Vérifie ordre chronologique<br/>group.StartTime <= otherGroup.StartTime
+            
+            alt Superposition détectée + ordre chronologique
+                FCS->>GCS: new GroupCalculationStep
+                FCS->>GCS: GroupsToCalculate = [group, otherGroup]
+                GCS->>GCS: Générer combinationKey unique
+                FCS->>FCS: Ajouter au calculationPlan
+            else Pas de superposition
+                FCS->>GCS: new GroupCalculationStep (groupe seul)
+                FCS->>GCS: GroupsToCalculate = [group]
+            end
         end
     end
     
-    loop Pour chaque overlappingSet
-        FCS->>FCS: GetDevicesForGroupSet(groupSet)
-        FCS->>DVM: Filter devices by GroupID
-        DVM-->>FCS: Équipements du groupe
+    loop Pour chaque GroupCalculationStep
+        FCS->>FCS: GetDevicesForGroupSet(step.GroupsToCalculate)
+        FCS->>DVM: Filter devices by GroupIDs
+        DVM-->>FCS: Équipements de l'étape
         
         Note over FCS: Passe 1: Fréquences verrouillées
-        FCS->>FCS: Process IsLocked channels
+        FCS->>FCS: Process IsLocked channels pour l'étape
         
         Note over FCS: Passe 2: Fréquences libres
-        FCS->>FCS: SetRandomFrequency() pour canaux libres
+        FCS->>FCS: SetRandomFrequency() pour l'étape
         
         Note over FCS: Passe 3: Fréquences de secours
-        FCS->>FCS: Generate backup frequencies
+        FCS->>FCS: Generate backup frequencies pour l'étape
         
-        FCS->>FCS: Assign group color
-        FCS->>FCS: Store groupFrequencyData
+        FCS->>FCS: CreateCalculationStepName(step)
+        Note over FCS: Résultat: "AC/DC & Katie Melua"<br/>ou "Bruce Springsteen"
+        
+        FCS->>FCS: Assign step color
+        FCS->>FCS: Store calculationStepData[stepName]
     end
     
+    FCS->>FCS: ConvertCalculationStepDataToGroupData()
     FCS->>DVM: SaveAllDevicesAsync()
     FCS->>FCS: SaveFrequencyDataAsync()
-    FCS-->>UI: Calcul terminé
-    UI-->>IS: Plan RF optimisé affiché
+    FCS-->>UI: Plan RF optimisé par étapes affiché
+    UI-->>IS: SciChart avec étapes explicites (ex: "Groupe A & B")
 ```
 
 ## Diagramme d'activité
 
 ```mermaid
 flowchart TD
-    A[Début calcul RF] --> B[Initialiser overlappingGroups]
-    B --> C[Récupérer tous les groupes]
-    C --> D[Début analyse chevauchements]
+    A[Début calcul RF] --> B[BuildGroupCalculationPlan]
+    B --> C[Trier groupes chronologiquement]
+    C --> D[Initialiser calculationPlan]
     
-    D --> E{Groupe déjà traité?}
-    E -->|Oui| F[Groupe suivant]
-    E -->|Non| G[Créer nouvel overlappingSet]
+    D --> E[Pour chaque groupe]
+    E --> F[FindOverlappingGroups]
+    F --> G{Superpositions détectées?}
     
-    G --> H[Ajouter groupe à l'ensemble]
-    H --> I[Marquer groupe comme traité]
-    I --> J[Analyser autres groupes]
+    G -->|Oui| H[Pour chaque groupe chevauchant]
+    H --> I{Ordre chronologique respecté?}
+    I -->|Oui| J[Créer GroupCalculationStep par paire]
+    I -->|Non| K[Ignorer cette paire]
     
-    J --> K{Chevauchement détecté?}
-    K -->|Oui| L[DoGroupsOverlap]
-    L --> M[Comparer toutes les TimePeriods]
-    M --> N{DoPeriodsOverlap?}
-    N -->|Oui| O[Ajouter à l'overlappingSet]
-    N -->|Non| P[Groupe suivant pour comparaison]
+    J --> L[Générer combinationKey unique]
+    L --> M{Déjà traité?}
+    M -->|Non| N[Ajouter au calculationPlan]
+    M -->|Oui| O[Passer au suivant]
     
-    P --> R{Autres groupes à vérifier?}
-    R -->|Oui| K
-    R -->|Non| S[Finaliser overlappingSet]
+    N --> P{Autres superpositions?}
+    O --> P
+    K --> P
+    P -->|Oui| H
+    P -->|Non| Q{Groupe isolé?}
     
-    S --> T{Autres groupes non traités?}
-    T -->|Oui| E
-    T -->|Non| U[Commencer calcul RF par ensemble]
+    G -->|Non| Q
+    Q -->|Oui| R[Créer étape individuelle]
+    R --> S["GroupsToCalculate = groupe seul"]
+    S --> T[Ajouter au calculationPlan]
     
-    U --> V[Sélectionner overlappingSet]
-    V --> W[GetDevicesForGroupSet]
-    W --> X[Initialiser FrequencyData pour le groupe]
+    T --> U{Autres groupes?}
+    Q -->|Non| U
+    U -->|Oui| E
+    U -->|Non| V[Démarrer calcul par étapes]
     
-    X --> Y[Passe 1: Fréquences verrouillées]
-    Y --> Z[Traiter IsLocked = true]
-    Z --> AA[SetRandomFrequency avec contraintes]
+    V --> W[Pour chaque GroupCalculationStep]
+    W --> X[GetDevicesForGroupSet]
+    X --> Y[Initialiser FrequencyData pour l'étape]
     
-    AA --> BB[Passe 2: Fréquences libres]
-    BB --> CC[Traiter canaux non verrouillés]
-    CC --> DD[Calcul intermodulation]
-    DD --> EE[Allocation fréquences optimales]
+    Y --> Z[Passe 1: Fréquences verrouillées]
+    Z --> AA[Traiter IsLocked = true pour l'étape]
+    AA --> BB[SetRandomFrequency avec contraintes d'étape]
     
-    EE --> FF[Passe 3: Fréquences de secours]
-    FF --> GG[Générer backup frequencies]
-    GG --> HH[Assigner couleur au groupe]
+    BB --> CC[Passe 2: Fréquences libres]
+    CC --> DD[Traiter canaux non verrouillés de l'étape]
+    DD --> EE[Calcul intermodulation pour l'étape]
+    EE --> FF[Allocation fréquences optimales par étape]
     
-    HH --> II{Autres overlappingSets?}
-    II -->|Oui| V
-    II -->|Non| JJ[Sauvegarder tous les devices]
+    FF --> GG[Passe 3: Fréquences de secours]
+    GG --> HH[Générer backup frequencies pour l'étape]
+    HH --> II[CreateCalculationStepName]
+    II --> JJ[Générer nom dynamique]
+    JJ --> KK["Ex: 'AC/DC & Katie Melua'"]
     
-    JJ --> KK[Sauvegarder FrequencyData]
-    KK --> LL[Mettre à jour affichage]
-    LL --> MM[Fin]
+    KK --> LL[Assigner couleur unique à l'étape]
+    LL --> MM[Stocker dans calculationStepData]
     
-    F --> R
+    MM --> NN{Autres étapes?}
+    NN -->|Oui| W
+    NN -->|Non| OO[ConvertCalculationStepDataToGroupData]
+    
+    OO --> PP[Sauvegarder tous les devices]
+    PP --> QQ[Sauvegarder FrequencyData]
+    QQ --> RR[Mettre à jour SciChart avec noms d'étapes]
+    RR --> SS[Fin]
+    
+    style J fill:#e3f2fd
+    style R fill:#f3e5f5
+    style JJ fill:#e8f5e8
+    style RR fill:#fff3e0
 ```
 
 ## Points d'extension
 
-- Pas de modifications futures prévues
+- **Optimisation des transitions** : Minimiser les changements de fréquences entre étapes consécutives
+- **Timeline interactive** : Visualiser les étapes dans le temps
+- **Templates temporels** : Sauvegarder des configurations d'étapes réutilisables
+- **Analyse prédictive** : Prévoir les conflits avant génération des étapes
 
 ## Contraintes techniques
 
-- L'algorithme DoPeriodsOverlap() utilise la logique : `StartTime1 < EndTime2 && EndTime1 > StartTime2`
-- Les groupes sont traités via un HashSet pour éviter les doublons
-- Les couleurs sont assignées cycliquement via un tableau prédéfini (10 couleurs)
-- La performance est optimisée par le traitement par clusters d'overlapping
-- Les TimePeriods sont sérialisées en JSON pour le stockage SQLite
+- Les étapes sont générées via `BuildGroupCalculationPlan()` selon l'ordre chronologique
+- La logique de superposition utilise `DoGroupsOverlap()` et `DoPeriodsOverlap()`
+- Les noms d'étapes sont générés dynamiquement : "Groupe A & B" ou "Groupe Seul"
+- La conversion pour SciChart utilise des fake group IDs (1000+) avec noms préservés
+- Les couleurs sont assignées séquentiellement (10 couleurs cycliques)
+- La performance est optimisée par traitement séquentiel des étapes temporelles
+- Les données sont stockées par étape dans `calculationStepData` puis converties pour l'affichage
